--- a/comply-cube-api/package.json
+++ b/comply-cube-api/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
