--- a/comply-cube-api/package.json
+++ b/comply-cube-api/package.json
@@ -4,7 +4,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "ts-node src/app.ts",
     "dev": "ts-node-dev --respawn src/app.ts",
     "test": "jest"
   },
