--- a/comply-cube-ui/tsconfig.json
+++ b/comply-cube-ui/tsconfig.json
@@ -20,5 +20,9 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts"  
+  ]
 }
